crates/rspyts-macros/tests/ui/required_on_variant.stderr
error: #[bridge(required)] applies only to a direct `Option<T>` object field
 --> tests/ui/required_on_variant.rs:5:5
  |
5 |     #[bridge(required)]
  |     ^^^^^^^^^^^^^^^^^^^

error: expected non-macro attribute, found attribute macro `bridge`
 --> tests/ui/required_on_variant.rs:5:7
  |
5 |     #[bridge(required)]
  |       ^^^^^^ not a non-macro attribute
