crates/rspyts-macros/tests/ui/required_on_variant.rs
use rspyts::bridge;

#[bridge]
pub enum RequiredVariant {
    #[bridge(required)]
    Value,
}

fn main() {}
